[metadata]
name = fuzzymap
version = attr: fuzzymap.__version__
author = Artyom Vancyan
author_email = artyom@pysnippet.org
description = The Fuzzy Map is a polymorph Python dictionary that always returns the value of the closest similar key.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pysnippet/fuzzymap
keywords =
    python
    map
    dict
    match
    fuzzy
    matching
    dictionary
    fuzzywuzzy
license = GPLv2
license_files = LICENSE
platforms = unix, linux, osx, win32
classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages =
    fuzzymap
install_requires =
    fuzzywuzzy>=0.3.0
    python-Levenshtein>=0.12.1
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    tox>=3.24
